src/test/deca/syntax/invalid/sansObjet/deuxpoints.deca
// Description:
//    tests de programme incorrect lexicalement (usage de : hors STRING)
//
// Resultats:
//    ligne 11 : token recognition error at: ':'
//
// Historique:
//    cree le 01/01/2024

{
  int a : 5;
}